@@ -87,6 +87,9 @@
  * Added a `new-plugin.pl` helper script that makes the skeleton of a
    new JBrowse plugin.
 
+ * Added an `add-json.pl` helper script that advanced users can use to
+   set arbitrary value in JSON files from the command line.
+
  * Fixed a bug in which the `--conf` option to `prepare-refseqs.pl`
    did not support comments in JSON conf files (issue #213).  Thanks
    to Keiran Raine for pointing this out.
